--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"Boilerplate for react project\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --mode development --watch",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,19 @@
   "bugs": {
     "url": "https://github.com/storiaca/react-boilerplate/issues"
   },
-  "homepage": "https://github.com/storiaca/react-boilerplate#readme"
+  "homepage": "https://github.com/storiaca/react-boilerplate#readme",
+  "devDependencies": {
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.4",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react": "6.24.1",
+    "css-loader": "0.28.11",
+    "style-loader": "0.21.0",
+    "webpack": "4.12.0",
+    "webpack-cli": "3.0.3"
+  },
+  "dependencies": {
+    "react": "16.4.0",
+    "react-dom": "16.4.0"
+  }
 }
