--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"Boilerplate for react project\"",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode development --watch",
+    "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -23,9 +23,11 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.11",
+    "html-webpack-plugin": "3.2.0",
     "style-loader": "0.21.0",
     "webpack": "4.12.0",
-    "webpack-cli": "3.0.3"
+    "webpack-cli": "3.0.3",
+    "webpack-dev-server": "3.1.4"
   },
   "dependencies": {
     "react": "16.4.0",
